interna nuestros profesionales

--- a/nuestros_profesionales.html
+++ b/nuestros_profesionales.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="plugins/swiper_slider/swiper-bundle.min.css">
+    <link rel="stylesheet" href="plugins/lightbox2/lightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -185,7 +186,16 @@
         <section class="s_direccion_cient">
             <div class="center">
                 <div class="c_direccion_cient">
-
+                    <picture>
+                        <img width="94" height="94"  src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="">
+                        <label for="">Dr. gustavo tamayo</label>
+                    </picture>
+                    <div class="desc_cient">
+                        <h2 class="tit_section c_lightblue">DIRECCIÓN CIENTÍFICA</h2>
+                        <div>
+                            Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC.
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -203,7 +213,7 @@
 
                                 <div class="swiper-slide">
                                     <picture>
-                                        <img width="106" height="106" src="" alt="">
+                                        <img width="106" height="106" src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="">
                                     </picture>
                                     <h4>Dr. gustavo tamayo</h4>
                                     <h5>comes from sections</h5>
@@ -216,7 +226,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <picture>
-                                        <img width="106" height="106" src="" alt="">
+                                        <img width="106" height="106" src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="">
                                     </picture>
                                     <h4>Dr. gustavo tamayo</h4>
                                     <h5>comes from sections</h5>
@@ -229,7 +239,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <picture>
-                                        <img width="106" height="106" src="" alt="">
+                                        <img width="106" height="106" src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="">
                                     </picture>
                                     <h4>Dr. gustavo tamayo</h4>
                                     <h5>comes from sections</h5>
@@ -242,7 +252,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <picture>
-                                        <img width="106" height="106" src="" alt="">
+                                        <img width="106" height="106" src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="">
                                     </picture>
                                     <h4>Dr. gustavo tamayo</h4>
                                     <h5>comes from sections</h5>
@@ -255,7 +265,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <picture>
-                                        <img width="106" height="106" src="" alt="">
+                                        <img width="106" height="106" src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80" alt="">
                                     </picture>
                                     <h4>Dr. gustavo tamayo</h4>
                                     <h5>comes from sections</h5>
@@ -289,25 +299,25 @@
                         Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC.
                     </div>
                     <div class="c_icon_equipos">
-                        <div class="card_i_equio">
+                        <div class="card_i_equipo">
                             <picture>
                                 <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i1.svg" alt="">
                             </picture>
                             <label for="">Lorem Ipsum</label>
                         </div>
-                        <div class="card_i_equio">
+                        <div class="card_i_equipo">
                             <picture>
                                 <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i2.svg" alt="">
                             </picture>
                             <label for="">Lorem Ipsum</label>
                         </div>
-                        <div class="card_i_equio">
+                        <div class="card_i_equipo">
                             <picture>
                                 <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i3.svg" alt="">
                             </picture>
                             <label for="">Lorem Ipsum</label>
                         </div>
-                        <div class="card_i_equio">
+                        <div class="card_i_equipo">
                             <picture>
                                 <img width="42" height="42" src="images/diseno/05-nuestros-profesionales/i4.svg" alt="">
                             </picture>
@@ -318,7 +328,49 @@
                     <!-- SLIDER -->
 
                     <div class="slider_n_equipo">
-
+                        <!-- Swiper -->
+                        <div class="swiper swiperEquipo">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a data-title="Esta es la etiqueta ALT" data-lightbox="nuesto_equipo" href="images/diseno/01-home/serv1.jpg">
+                                        <img class="" width="325" height="217" src="images/diseno/01-home/serv1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a data-title="Esta es la etiqueta ALT" data-lightbox="nuesto_equipo" href="images/diseno/01-home/serv1.jpg">
+                                        <img class="" width="325" height="217" src="images/diseno/01-home/serv1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a data-title="Esta es la etiqueta ALT" data-lightbox="nuesto_equipo" href="images/diseno/01-home/serv1.jpg">
+                                        <img class="" width="325" height="217" src="images/diseno/01-home/serv1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a data-title="descripcion de texto en el modal" data-lightbox="nuesto_equipo" href="images/diseno/01-home/serv1.jpg">
+                                        <img class="" width="325" height="217" src="images/diseno/01-home/serv1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a data-title="Esta es la etiqueta ALT" data-lightbox="nuesto_equipo" href="images/diseno/01-home/serv1.jpg">
+                                        <img class="" width="325" height="217" src="images/diseno/01-home/serv1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a data-title="Esta es la etiqueta ALT" data-lightbox="nuesto_equipo" href="images/diseno/01-home/serv1.jpg">
+                                        <img class="" width="325" height="217" src="images/diseno/01-home/serv1.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a data-title="Esta es la etiqueta ALT" data-lightbox="nuesto_equipo" href="images/diseno/01-home/serv1.jpg">
+                                        <img class="" width="325" height="217" src="images/diseno/01-home/serv1.jpg" alt="">
+                                    </a>
+                                </div>
+                                
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                     </div>
 
                     <div class="cont_btn al_center">
@@ -337,7 +389,14 @@
         <!-- SCRIPTS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="./plugins/swiper_slider/swiper-bundle.min.js"></script>
+        <script src="./plugins/lightbox2/lightbox-plus-jquery.min.js"></script>
+<!--         <script src="./plugins/lightbox2/lightbox.min.js"></script> -->
         <script src="./js/main.js"></script>
+<!-- 
+        <script>
+            $(".js-modal-btn").modalVideo();
+        </script> -->
+
         <!-- ************** -->
 
         <section class="s_medios_pago">
