avance interna preguntas frecuentes

--- a/preguntas_frecuentes.html
+++ b/preguntas_frecuentes.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="plugins/swiper_slider/swiper-bundle.min.css">
+    <link rel="stylesheet" href="plugins/modal_video/modal-video.min.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -155,8 +156,10 @@
     <main>
         <div class="spacer"></div>
 
+        <section class="s_preguntas_f">
+            <div class="center">
                 <!-- MIGA DE PAN -->
-        
+
                 <div class="miga">
                     <a href="" class="link_miga">Bogotá Laser</a>
                     <span> / </span>
@@ -164,6 +167,109 @@
                 </div>
                 
                 <!-- *********** -->
+                <div class="c_preguntas_f">
+
+                    <h1 class="tit_section">PREGUNTAS FRECUENTES</h1>
+
+                    <div class="grand_container_preguntas">
+                        <aside>
+                            <h4>Elige una categoría</h4>
+                            <select name="" id="">
+                                <optgroup>
+                                    <option value="" selected disabled>Categoría</option>
+                                    <option value="">Cirugías</option>
+                                    <option value="">Cirugías</option>
+                                    <option value="">Cirugías</option>
+                                    <option value="">Cirugías</option>
+                                </optgroup>
+                            </select>
+                        </aside>
+                        <div class="container_preguntas_f">
+                            <div class="item_pregunta_f">
+                                <a class="c_tit_pregunta">
+                                    <div>¿Lorem Ipsum is simply dummy text of the printing?</div>
+                                    <span class="fas fa-times"></span>
+                                </a>
+                                <div class="item_respuesta_f">
+                                    <div class="txt">
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'
+                                    </div>
+                                    <div class="cont_cta">
+                                        <a href="" class="btn lightblue">Call to action</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item_pregunta_f">
+                                <a class="c_tit_pregunta">
+                                    <div>¿Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer?</div>
+                                    <span class="fas fa-times"></span>
+                                </a>
+                                <div class="item_respuesta_f">
+                                    <a class="js-modal-btn" data-video-id="7TUOI23spt0">
+                                        <img src="https://picsum.photos/600/400" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="item_pregunta_f">
+                                <a class="c_tit_pregunta">
+                                    <div>¿Lorem Ipsum is simply dummy text of the printing?</div>
+                                    <span class="fas fa-times"></span>
+                                </a>
+                                <div class="item_respuesta_f">
+                                    <div class="txt">
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item_pregunta_f">
+                                <a class="c_tit_pregunta">
+                                    <div>¿Lorem Ipsum is simply dummy text?</div>
+                                    <span class="fas fa-times"></span>
+                                </a>
+                                <div class="item_respuesta_f">
+                                    <div class="txt">
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item_pregunta_f">
+                                <a class="c_tit_pregunta">
+                                    <div>¿Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer?</div>
+                                    <span class="fas fa-times"></span>
+                                </a>
+                                <div class="item_respuesta_f">
+                                    <div class="txt">
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item_pregunta_f">
+                                <a class="c_tit_pregunta">
+                                    <div>¿Lorem Ipsum is simply dummy text of the printing?</div>
+                                    <span class="fas fa-times"></span>
+                                </a>
+                                <div class="item_respuesta_f">
+                                    <div class="txt">
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item_pregunta_f">
+                                <a class="c_tit_pregunta">
+                                    <div>¿Lorem Ipsum is simply dummy text?</div>
+                                    <span class="fas fa-times"></span>
+                                </a>
+                                <div class="item_respuesta_f">
+                                    <div class="txt">
+                                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
@@ -174,7 +280,13 @@
         <!-- SCRIPTS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="./plugins/swiper_slider/swiper-bundle.min.js"></script>
+        <script src="./plugins/modal_video/jquery-modal-video.min.js"></script>
+        <script src="./plugins/modal_video/modal-video.min.js"></script>
         <script src="./js/main.js"></script>
+
+        <script>
+            $(".js-modal-btn").modalVideo();
+        </script>
         <!-- ************** -->
 
         <section class="s_medios_pago">
