--- a/club_beneficios.html
+++ b/club_beneficios.html
@@ -196,15 +196,108 @@
                     </div>
 
                     <div class="cards_club_bene">
-                        <div class="card_clubbeneficios">
-                            <div class="frontcard">
 
-                            </div>
-                            <div class="backcard">
-                                
+                        <div class="cardbox">
+                            <div class="card_clubbeneficios">
+                                <div class="frontcard">
+                                    <picture class="fc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_footer.svg" alt="">
+                                    </picture>
+                                    <picture class="fc_img">
+                                        <img width="470" height="246" src="images/diseno/09-club-de-beneficios/img_card.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="backcard">
+                                    <picture class="bc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_blanco_azul.svg" alt="">
+                                    </picture>
+                                    <div class="cont_back_bene">
+                                        <h4>¡Ahora que tienes una visión HD!</h4>
+                                        <div class="bc_txt">
+                                            Disfruta un <b> 30% OFF </b> en gafas de sol y <b> 50% OFF </b> en tu cita de control anual
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <div class="cardbox">
+                            <div class="card_clubbeneficios">
+                                <div class="frontcard">
+                                    <picture class="fc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_footer.svg" alt="">
+                                    </picture>
+                                    <picture class="fc_img">
+                                        <img width="470" height="246" src="images/diseno/09-club-de-beneficios/img_card.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="backcard">
+                                    <picture class="bc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_blanco_azul.svg" alt="">
+                                    </picture>
+                                    <div class="cont_back_bene">
+                                        <h4>¡Ahora que tienes una visión HD!</h4>
+                                        <div class="bc_txt">
+                                            Disfruta un <b> 30% OFF </b> en gafas de sol y <b> 50% OFF </b> en tu cita de control anual
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cardbox">
+                            <div class="card_clubbeneficios">
+                                <div class="frontcard">
+                                    <picture class="fc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_footer.svg" alt="">
+                                    </picture>
+                                    <picture class="fc_img">
+                                        <img width="470" height="246" src="images/diseno/09-club-de-beneficios/img_card.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="backcard">
+                                    <picture class="bc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_blanco_azul.svg" alt="">
+                                    </picture>
+                                    <div class="cont_back_bene">
+                                        <h4>¡Ahora que tienes una visión HD!</h4>
+                                        <div class="bc_txt">
+                                            Disfruta un <b> 30% OFF </b> en gafas de sol y <b> 50% OFF </b> en tu cita de control anual
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cardbox">
+                            <div class="card_clubbeneficios">
+                                <div class="frontcard">
+                                    <picture class="fc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_footer.svg" alt="">
+                                    </picture>
+                                    <picture class="fc_img">
+                                        <img width="470" height="246" src="images/diseno/09-club-de-beneficios/img_card.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="backcard">
+                                    <picture class="bc_logo">
+                                        <img width="195" height="26"  src="images/diseno/logo_blanco_azul.svg" alt="">
+                                    </picture>
+                                    <div class="cont_back_bene">
+                                        <h4>¡Ahora que tienes una visión HD!</h4>
+                                        <div class="bc_txt">
+                                            Disfruta un <b> 30% OFF </b> en gafas de sol y <b> 50% OFF </b> en tu cita de control anual
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
+
+                    <div class="cont_cta al_center">
+                        <div>
+                            Aqui podras encontrar los <a class="btn link" href=""> Términos y condiciones*</a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
