--- a/club_beneficios.html
+++ b/club_beneficios.html
@@ -292,7 +292,7 @@
 
                     </div>
 
-                    <div class="cont_cta al_center">
+                    <div class="cont_cta2 al_center">
                         <div>
                             Aqui podras encontrar los <a class="btn link" href=""> Términos y condiciones*</a>
                         </div>
