--- a/nuestros_profesionales_int.html
+++ b/nuestros_profesionales_int.html
@@ -339,34 +339,44 @@
         <section class="s_medios_pago">
             <div class="center">
                 <div class="c_medios_pago">
-                    <h5>
-                        Medios de pago
-                    </h5>
                     <div class="logos_medios">
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
-                        <picture>
-                            <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
-                        </picture>
+                        <h5>
+                            Medios de pago
+                        </h5>
+                        <!-- Swiper -->
+                        <div class="swiper swiperLogosMedios">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <img width="150px" height="32px" src="images/diseno/01-home/logo_davivienda.png" alt="">
+                                    </picture>
+                                </div>
+                               
+                                
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                     </div>
                 </div>
             </div>
