--- a/cultura_segura.html
+++ b/cultura_segura.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="plugins/swiper_slider/swiper-bundle.min.css">
+    <link rel="stylesheet" href="plugins/modal_video/modal-video.min.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -523,6 +524,8 @@
         <!-- SCRIPTS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="./plugins/swiper_slider/swiper-bundle.min.js"></script>
+        <script src="./plugins/modal_video/jquery-modal-video.min.js"></script>
+        <script src="./plugins/modal_video/modal-video.min.js"></script>
         <script src="./js/main.js"></script>
 
         <script>
