Inicio estilos interna tratamientos

--- a/interna_tratamiento.html
+++ b/interna_tratamiento.html
@@ -293,8 +293,8 @@
                             <img width="24" height="24" src="" alt=""> <h4>TESTIMONIOS</h4>
                         </div>
                         <div class="contenido_proced">
-                            <a href="" class="">
-                                <img src="https://picsum.photos/600/400" alt="">
+                            <a href="" class="video_testimonio js-modal-btn" data-video-id="7TUOI23spt0">
+                                <img width="544" height="346" src="https://picsum.photos/600/400" alt="">
                             </a>
                         </div>
                     </div>
