sub ajuste int trabaje con nosotros

--- a/trabaje_con_nosotros.html
+++ b/trabaje_con_nosotros.html
@@ -156,7 +156,7 @@
     <main>
         <div class="spacer"></div>
 
-            <section class="s_header_int color2">
+            <section class="s_header_int int_trabaje color2">
                 <picture class="">
                     <img width="755" height="533" src="images/diseno/14-trabaje-con-nosotros/img_header.png" alt="">
                 </picture>
@@ -191,12 +191,167 @@
                         </div>
                         <div class="cont_vid_img">
                             <picture>
-                                <img width="358" height="240" src="ttps://picsum.photos/600/400" alt="">
+                                <img width="358" height="240" src="https://picsum.photos/600/400" alt="">
                             </picture>
                             <a href="" class="js-modal-btn" data-video-id="7TUOI23spt0">
-                                <img width="358" height="240" src="https://picsum.photos/540/330" alt="">
+                                <img width="358" height="240" src="https://picsum.photos/600/400" alt="">
                             </a>
+                            <a href="" class="js-modal-btn" data-video-id="7TUOI23spt0">
+                                <img width="358" height="240" src="https://picsum.photos/600/400" alt="">
+                            </a>
+                            <picture>
+                                <img width="358" height="240" src="https://picsum.photos/600/400" alt="">
+                            </picture>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="s_nuestros_valores">
+                <div class="center">
+                    <h3 class="tit_section c_lightblue">Nuestros valores</h3>
+                    <div class="c_nuestros_valores">
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb1.svg" alt="">
+                            </picture>
+                            <span>
+                                Trabajo en equipo
+                            </span>
+                        </div>
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb2.svg" alt="">
+                            </picture>
+                            <span>
+                                Atencion al cliente
+                            </span>
+                        </div>
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb1.svg" alt="">
+                            </picture>
+                            <span>
+                                Trabajo en equipo
+                            </span>
+                        </div>
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb2.svg" alt="">
+                            </picture>
+                            <span>
+                                Trabajo en equipo
+                            </span>
+                        </div>
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb1.svg" alt="">
+                            </picture>
+                            <span>
+                                Trabajo en equipo
+                            </span>
+                        </div>
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb2.svg" alt="">
+                            </picture>
+                            <span>
+                                Trabajo en equipo
+                            </span>
+                        </div>
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb1.svg" alt="">
+                            </picture>
+                            <span>
+                                Trabajo en equipo
+                            </span>
+                        </div>
+                        <div class="item_nv">
+                            <picture>
+                                <img width="80" height="80" src="images/diseno/14-trabaje-con-nosotros/icon_tb2.svg" alt="">
+                            </picture>
+                            <span>
+                                Trabajo en equipo
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="s_mision_vision">
+                <div class="center">
+                    <div class="c_mision_vision">
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a class="active" href="">Misión</a>
+                                </li>
+                                <li>
+                                    <a href="">Visión</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="desc_mision_vision">
+                            Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+                            <br> <br>
+                            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="s_nuestras_vacantes">
+                <div class="center">
+                    <div class="c_nuestras_vacantes">
+                        <h3 class="tit_section c_lightblue">Conoce nuestras vacantes</h3>
+                        <div class="cont_cards_vacantes">
+                            <div class="card_vacante">
+                                aqui la card de vacante
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="s_form_trabaja">
+                <div class="center">
+                    <div class="c_form_trabaja">
+                        <div class="c_tit_section al_left">
+                            <h3 class="tit_section c_white">Trabaja con nosotros</h3>
+                            <div>
+                                Las líneas de Bogotá Laser están a tu disposición para resolver inquietudes de cada uno de nuestros servicios o para realizar sugerencias o comentarios y así brindarte una atención personalizada e información oportuna.
+                            </div>
+                        </div>
+                        <form action="" class="form_tn">
+                            <div class="cont_input_x2">
+                                <input type="text" placeholder="Nombre*" required>
+                                <input type="text" placeholder="Apellidos*" required>
+                            </div>
+                            <div class="cont_input_x2">
+                                <input type="number" placeholder="Celular*" required>
+                                <input type="email" placeholder="Email*" required>
+                            </div>
+                            <div class="cont_input">
+                                <select name="" id="">
+                                    <option value="">¿A qué cargo aplica?</option>
+                                    <option value="">cargo 1</option>
+                                    <option value="">cargo 2</option>
+                                    <option value="">cargo 3</option>
+                                    <option value="">cargo 4</option>
+                                </select>
+                            </div>
+                            <div class="cont_input file">
+                                <input type="file" >
+                            </div>
+                            <div class="cont_input chk">
+                                <input type="checkbox" name="" id="">
+                                <label for="">Acepto las políticas de <a href=""> tratamiento de datos</a></label>
+                            </div>
+                            <div class="cont_submit">
+                                <button type="submit">Enviar</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </section>
