interna trabaje con nosotros OK con responsive

--- a/trabaje_con_nosotros.html
+++ b/trabaje_con_nosotros.html
@@ -307,8 +307,62 @@
                         <h3 class="tit_section c_lightblue">Conoce nuestras vacantes</h3>
                         <div class="cont_cards_vacantes">
                             <div class="card_vacante">
-                                aqui la card de vacante
+                                <h5>Enfermera</h5>
+                                <div class="precio_vacante">$1.5 a $2 millones</div>
+                                <div class="ubi_vacante"><span class="fas fa-map-marker-alt"></span>Bogotá</div>
+                                <div class="ubi_vacante"><span class="fas fa-briefcase"></span>Unidad médica #2</div>
+                                <div class="cont_btn al_left">
+                                    <a class="btn lightblue" href="">Aplicar</a>
+                                </div>
                             </div>
+                            <div class="card_vacante">
+                                <h5>Enfermera</h5>
+                                <div class="precio_vacante">$1.5 a $2 millones</div>
+                                <div class="ubi_vacante"><span class="fas fa-map-marker-alt"></span>Bogotá</div>
+                                <div class="ubi_vacante"><span class="fas fa-briefcase"></span>Unidad médica #2</div>
+                                <div class="cont_btn al_left">
+                                    <a class="btn lightblue" href="">Aplicar</a>
+                                </div>
+                            </div>
+                            <div class="card_vacante">
+                                <h5>Enfermera</h5>
+                                <div class="precio_vacante">$1.5 a $2 millones</div>
+                                <div class="ubi_vacante"><span class="fas fa-map-marker-alt"></span>Bogotá</div>
+                                <div class="ubi_vacante"><span class="fas fa-briefcase"></span>Unidad médica #2</div>
+                                <div class="cont_btn al_left">
+                                    <a class="btn lightblue" href="">Aplicar</a>
+                                </div>
+                            </div>
+                            <div class="card_vacante">
+                                <h5>Enfermera</h5>
+                                <div class="precio_vacante">$1.5 a $2 millones</div>
+                                <div class="ubi_vacante"><span class="fas fa-map-marker-alt"></span>Bogotá</div>
+                                <div class="ubi_vacante"><span class="fas fa-briefcase"></span>Unidad médica #2</div>
+                                <div class="cont_btn al_left">
+                                    <a class="btn lightblue" href="">Aplicar</a>
+                                </div>
+                            </div>
+                            <div class="card_vacante">
+                                <h5>Enfermera</h5>
+                                <div class="precio_vacante">$1.5 a $2 millones</div>
+                                <div class="ubi_vacante"><span class="fas fa-map-marker-alt"></span>Bogotá</div>
+                                <div class="ubi_vacante"><span class="fas fa-briefcase"></span>Unidad médica #2</div>
+                                <div class="cont_btn al_left">
+                                    <a class="btn lightblue" href="">Aplicar</a>
+                                </div>
+                            </div>
+                            <div class="card_vacante">
+                                <h5>Enfermera</h5>
+                                <div class="precio_vacante">$1.5 a $2 millones</div>
+                                <div class="ubi_vacante"><span class="fas fa-map-marker-alt"></span>Bogotá</div>
+                                <div class="ubi_vacante"><span class="fas fa-briefcase"></span>Unidad médica #2</div>
+                                <div class="cont_btn al_left">
+                                    <a class="btn lightblue" href="">Aplicar</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cont_btn al_center">
+                            <a href="" class="btn lightblue">Cargar más vacantes</a>
                         </div>
                     </div>
                 </div>
@@ -344,9 +398,9 @@
                             <div class="cont_input file">
                                 <input type="file" >
                             </div>
-                            <div class="cont_input chk">
-                                <input type="checkbox" name="" id="">
-                                <label for="">Acepto las políticas de <a href=""> tratamiento de datos</a></label>
+                            <div class="cont_input chk trabaje_chk">
+                                <input type="checkbox" name="" id="trabaje1">
+                                <label for="trabaje1">Acepto las políticas de <a href=""> tratamiento de datos</a></label>
                             </div>
                             <div class="cont_submit">
                                 <button type="submit">Enviar</button>
