interna examenes diagnosticos OK con responsive

--- a/examenes_diagnosticos.html
+++ b/examenes_diagnosticos.html
@@ -157,7 +157,7 @@
 
         <section class="s_header_int">
             <picture class="">
-                <img width="755" height="533" src="images/diseno/19-defectos-visuales/img_header_consulta_oft.png" alt="">
+                <img width="755" height="533" src="images/diseno/19-defectos-visuales/img_header_examenes_diag.png" alt="">
             </picture>
             <div class="center">
                 
@@ -193,11 +193,16 @@
                             <span class="fas fa-bars"></span>
                         </div>
                         <div class="items_btn_dv">
-                            <a class="active">Consulta de córnea</a>
-                            <a>Consulta pediátrica</a>
-                            <a>Consulta oculoplástica</a>
-                            <a>Consulta de optometría</a>
-                            <a>Consulta de retina y vítreo</a>
+                            <a class="active">Tornometría con aire</a>
+                            <a>Recuento de celulas endoteliales</a>
+                            <a>Tomografía axial computarizada del ojo (pentacam)a</a>
+                            <a>Paquimetría</a>
+                            <a>Aberrometría (wave-front o idesign)</a>
+                            <a>Pupilometría</a>
+                            <a>Tomografía de coherencia óptica</a>
+                            <a>Biometría ocular (iol master)</a>
+                            <a>Visión de contraste</a>
+                            <a>REfractómetro laser automático (tracey)</a>
                         </div>
                     </aside>
                     <div class="content_aside_dv">
@@ -214,9 +219,6 @@
                             
                         </div>
                     </div>
-                </div>
-                <div class="cont_btn al_center">
-                    <a href="" class="btn lightblue">Reservar tu consulta</a>
                 </div>
             </div>
         </section>
